# WebServer

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/log/: log.h
src/web/: server.c  server.h
